manifests/team-md-update-manifests-yaml-octopub/eph1/octopub-audits.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: octopub-audit-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: auditservice
  template:
    metadata:
      labels:
        component: auditservice
    spec:
      containers:
        - name: auditservice
          image: octopussamples/octopub-audit-microservice:20260317.1320.1
          ports:
            - name: http-audit
              containerPort: 10000
